examples/errors/extends_self2.ik
type Sized class extends Self:
    fn size(Self) Int

fn main():
    print("\n")
